--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-*{
+*{ 
+    background-color: #F0F0F0;
     margin: 0;
     padding: 0;
 }
@@ -6,6 +7,7 @@ body{
    margin: 50px;
    font-size: 15px;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+
 }
 span{
     color: red;
