--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
 }
 body{
+   background-color: #F0F0F0;
    margin: 50px;
    font-size: 15px;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
@@ -13,6 +14,7 @@ span{
     color: red;
 }
 .container{
+    background-color: #F0F0F0;
     margin: 0 10%;
     padding: 15px;
     width: 80%;
